--- a/ASSIGNMENTS/Assignment-7/style.css
+++ b/ASSIGNMENTS/Assignment-7/style.css
@@ -4,32 +4,39 @@
 }
   /* BACKGROUND CSS*/
   body {
-      background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-      background-size: 400% 400%;
-      animation: gradient 15s ease infinite;
-  }
-  
-  @keyframes gradient {
-      0% {
-          background-position: 0% 50%;
-      }
-      50% {
-          background-position: 100% 50%;
-      }
-      100% {
-          background-position: 0% 50%;
-      }
-  }
+    background: linear-gradient(225deg, #2e9e81, #5e8640, #739fcd);
+    background-size: 600% 600%;
 
+    -webkit-animation: AnimationName 19s ease infinite;
+    -moz-animation: AnimationName 19s ease infinite;
+    animation: AnimationName 19s ease infinite;
+}
 
+@-webkit-keyframes AnimationName {
+    0%{background-position:0% 62%}
+    50%{background-position:100% 39%}
+    100%{background-position:0% 62%}
+}
+@-moz-keyframes AnimationName {
+    0%{background-position:0% 62%}
+    50%{background-position:100% 39%}
+    100%{background-position:0% 62%}
+}
+@keyframes AnimationName {
+    0%{background-position:0% 62%}
+    50%{background-position:100% 39%}
+    100%{background-position:0% 62%}
+}
 /* MAIN CSS */
 #container{
+    font-weight: 900;
     width: 50vw;
+    height: 50vh;
     /* border: 1px solid black; */
     margin: 200px auto;
     /* color: white; */
     text-align: center;
-
+    padding: 40px;
 }
 
 .info{
