--- a/ASSIGNMENTS/Assignment-8/views/employees/index.ejs
+++ b/ASSIGNMENTS/Assignment-8/views/employees/index.ejs
@@ -21,8 +21,8 @@
         <td><%= employee.email %> </td>
         <td><%= employee.department %> </td>
         <td><%= employee.status %> </td>
-        <td></td>
-        <td></td>
+        <td><%= employee.timeIn %> </td>
+        <td><%= employee.timeOut %> </td>
         <td>  <a href="/employees/<%=employee._id%>" class="btn btn-outline-primary">Expand</a></td>
       </tr>
       <% } %> 
